<resources>
    <string name="app_name">Instaglam</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="Signup">SIGN UP (IT\'S FREE!)</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="my_feed">My Feed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture">Take Picture</string>
    <string name="description">Description…</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="camera_image">Camera Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="instaglam_icon">Instaglam Icon</string>
</resources>