<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ComposeFragment">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/ivPostImage"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/layout_bg"
        android:contentDescription="@string/camera_image"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:text="@string/take_picture"
        app:cornerRadius="10dp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCaptureImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="5"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:text="@string/submit"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSubmit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:text="@string/log_out"
        app:cornerRadius="10dp" />

</RelativeLayout>